--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a vue-ts demo project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "set NODE_ENV=production&&webpack",
+    "dev": "set NODE_ENV=dev&&webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "skiming",
@@ -15,7 +16,8 @@
     "typescript": "^2.5.3",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
     "vue": "^2.5.2"
